# SeguimientoMedico

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json  welcome.sh
docs/: ARQUITECTURA_ESCALA.md  CAMINO_A_100.md  CONEXION_TWILIO_OPENAI.md  DEPLOY.md  ESTADO_Y_PROXIMOS_PASOS.md  ESTRATEGIA_MARKETING.md  MARKETING_CAMPANAS.md  PAGINA_10.md  PARAMETRIZACION.md  PRODUCTO_APP.md  PRUEBA_LLAMADA_VOZ.md
health_monitor/: __init__.py  acompanante.py  bi_advisor.py  calls.py  cartilla.py  chat.py  cuidado.py  main.py  memoria.py  payments.py  ratelimit.py  scheduler.py  services.py  usage.py
scripts/: check_connections.py  demo_local.py  list_whatsapp_templates.py  run_app.sh  run_scheduler.py  send_test_whatsapp.py  test_call.py  test_call_ai.py  ver_reporte.py
shared/: __init__.py  auth.py  config.py  notifications.py  security.py  tracing.py  twilio_security.py
tests/: conftest.py  test_acompanante.py  test_api.py  test_bi.py  test_bi_advisor.py  test_calls.py  test_chat.py  test_clinical_extraction.py  test_companion.py  test_cuidado.py  test_fhir.py  test_improver.py  test_media_stream.py  test_memoria.py  test_memoria_integracion.py  test_migrate.py  test_mood.py  test_orchestrator.py  test_plantillas.py  test_ratelimit.py  test_scheduler.py  test_schemas_validacion.py  test_security.py  test_subscription.py  test_supervisor.py  test_triage.py  test_twilio_guard.py  test_twilio_security.py  test_usage.py  test_version.py  test_whatsapp_voice.py
(+39 files in other folders)
