[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seguimiento-medico"
dynamic = ["version"]
description = "Agentic Healthcare Monitor"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["shared", "health_monitor"]

[tool.setuptools.dynamic]
version = {attr = "health_monitor.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
